[gd_scene load_steps=16 format=3 uid="uid://b68wx5o60b8my"]

[ext_resource type="Script" path="res://Scripts/main_scene.gd" id="1_h6at2"]
[ext_resource type="Texture2D" uid="uid://dyqcqsxfthiuo" path="res://images/Default_chest_armor_icon_low_poly_game_art_0_d0b05491-ab38-4a90-ab4f-d36346abdf13_0.png" id="2_htmuh"]
[ext_resource type="Theme" uid="uid://fw1dvimw86fq" path="res://new_theme.tres" id="2_j38ks"]
[ext_resource type="Texture2D" uid="uid://dg2j2l2aeskkp" path="res://images/Default_perfect_single_mana_potion_low_poly_game_art_0_66181da3-035f-4653-bb99-e52da8fc3d1b_0.png" id="3_f0djd"]
[ext_resource type="Texture2D" uid="uid://b6kb1fatieyic" path="res://images/Default_perfect_rounded_gold_coin_low_poly_game_art_1_f79961b3-6fb6-40f2-821e-db0780babcd5_0.png" id="4_yrh8c"]
[ext_resource type="Texture2D" uid="uid://vofk24r7s5p7" path="res://images/Default_red_single_health_potion_game_art_0_7e5b49ae-ff4f-4d74-9fb6-4be913398128_0.png" id="5_tner5"]
[ext_resource type="Texture2D" uid="uid://ctsdc61kxnxvj" path="res://images/360_F_453630770_N9UkWkDVZGC9AA91ohlKhdjDMMNhBQbU.jpg" id="7_gsswm"]
[ext_resource type="Texture2D" uid="uid://dp5ofbe2h2we5" path="res://images/gemstone.png" id="8_1tysi"]
[ext_resource type="Texture2D" uid="uid://chonfmk436iic" path="res://images/tılsım (1).png" id="9_a7arw"]

[sub_resource type="GDScript" id="GDScript_iskr5"]

[sub_resource type="Animation" id="Animation_b8hak"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_colors/font_shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.403922, 0, 0.890196, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}

[sub_resource type="Animation" id="Animation_g8g3q"]
resource_name = "glow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.337255, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_colors/font_shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [null, Color(0.403922, 0, 0.890196, 1), null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [25, 32, 25]
}

[sub_resource type="Animation" id="Animation_1u3nv"]
resource_name = "scoreUpdate"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yvxvs"]
_data = {
"RESET": SubResource("Animation_b8hak"),
"glow": SubResource("Animation_g8g3q"),
"scoreUpdate": SubResource("Animation_1u3nv")
}

[sub_resource type="SystemFont" id="SystemFont_0yxbg"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_h6at2")

[node name="ImageCard" type="Sprite2D" parent="."]
position = Vector2(325, 400)
scale = Vector2(-0.46, 0.45)
script = SubResource("GDScript_iskr5")

[node name="Labels" type="Node" parent="."]

[node name="Gold" type="Label" parent="Labels"]
offset_left = -3.0
offset_top = 37.0
offset_right = 331.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.403922, 0, 0.890196, 1)
theme_override_font_sizes/font_size = 25
text = "50"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Labels/Gold"]
libraries = {
"": SubResource("AnimationLibrary_yvxvs")
}

[node name="Health" type="Label" parent="Labels"]
offset_left = 122.0
offset_top = 36.0
offset_right = 456.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 25
text = "50"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Labels/Health"]

[node name="Mana" type="Label" parent="Labels"]
offset_left = 262.0
offset_top = 37.0
offset_right = 596.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 25
text = "70"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Labels/Mana"]

[node name="Strength" type="Label" parent="Labels"]
offset_left = 413.0
offset_top = 36.0
offset_right = 747.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 25
text = "50"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Labels/Strength"]

[node name="Story" type="Label" parent="Labels"]
offset_left = 73.0
offset_top = 682.0
offset_right = 596.0
offset_bottom = 776.0
theme_override_font_sizes/font_size = 19
text = "Resimdeki yaratık seninle savaşmak istiyor. 
Kabul ediyor musun? Resimdeki yaratık seninle savaşmak istiyor."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Option Buttons" type="Node" parent="."]

[node name="OptionA" type="Button" parent="Option Buttons"]
offset_left = 53.0
offset_top = 796.0
offset_right = 583.0
offset_bottom = 880.0
theme = ExtResource("2_j38ks")
text = "This is option A."

[node name="OptionB" type="Button" parent="Option Buttons"]
offset_left = 54.0
offset_top = 898.0
offset_right = 584.0
offset_bottom = 982.0
theme = ExtResource("2_j38ks")
theme_override_fonts/font = SubResource("SystemFont_0yxbg")
text = "This is option B."

[node name="DefaultChestArmorIconLowPolyGameArt0D0b05491-ab38-4a90-ab4f-d36346Abdf130" type="Sprite2D" parent="."]
position = Vector2(516, 59.0001)
scale = Vector2(0.102865, 0.0849609)
texture = ExtResource("2_htmuh")

[node name="DefaultPerfectSingleManaPotionLowPolyGameArt066181Da3-035f-4653-bb99-e52Da8Fc3d1b0" type="Sprite2D" parent="."]
position = Vector2(373, 60)
scale = Vector2(0.0987956, 0.0844727)
texture = ExtResource("3_f0djd")

[node name="DefaultPerfectRoundedGoldCoinLowPolyGameArt1F79961b3-6Fb6-40f2-821e-db0780Babcd50" type="Sprite2D" parent="."]
position = Vector2(87, 60)
rotation = -0.966912
scale = Vector2(0.0999815, 0.0922817)
texture = ExtResource("4_yrh8c")

[node name="DefaultRedSingleHealthPotionGameArt07e5b49Ae-ff4f-4d74-9Fb6-4Be9133981280" type="Sprite2D" parent="."]
position = Vector2(234, 61.0001)
scale = Vector2(0.0961101, 0.0861816)
texture = ExtResource("5_tner5")

[node name="360F453630770N9UkWkDvzgc9aa91OhlKhdjDmmNhBQbU" type="Sprite2D" parent="."]
z_index = -99
position = Vector2(319.5, 518.5)
scale = Vector2(1.1875, 2.85833)
texture = ExtResource("7_gsswm")

[node name="Gemstone" type="Sprite2D" parent="."]
visible = false
position = Vector2(604, 269)
scale = Vector2(0.0592448, 0.0527344)
texture = ExtResource("8_1tysi")

[node name="Tılsım" type="Sprite2D" parent="."]
visible = false
position = Vector2(608.125, 354.5)
rotation = 0.966912
scale = Vector2(0.069987, 0.0751953)
texture = ExtResource("9_a7arw")

[connection signal="pressed" from="Option Buttons/OptionA" to="." method="_on_optionA_pressed"]
[connection signal="pressed" from="Option Buttons/OptionB" to="." method="_on_option_b_pressed"]
